# atomic-processors

./: .dockerignore  .editorconfig  .env.sample  .gitignore  .gitmodules  .labelsrc  AtomicProcessors.cbp  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  README.md  config.h  config.h.in  main.cpp
__deploy__/: build.sh  run.sh
__scripts__/: aa-extract-logs.py  makeflatjson.py  makejson.py  pick.py  uniquejson.py  unspacejson.py
__tests__/: anime-alice.bats  csv2json.bats  pick.bats  templater.bats  text-clean-up.bats  unique.bats
incl/: .gitignore
include/: csv.hpp
projects/: CMakeLists.txt
projects/anime-alice/: CMakeLists.txt  extract.cpp  extract.h
scripts/: makecsv.py  makejson.py  sortjson.py  uniquejson.py
src/: main.cpp
src/subcommands/: csv2json.cpp  csv2json.h  templater.cpp  unique.cpp
src/utils/: json.cpp  read.cpp  string.cpp  vector.cpp  write.cpp
subcommands/: CMakeLists.txt  csv2json.cpp  csv2json.h  pick.cpp  pick.h  templater.cpp  templater.h  text_clean.cpp  text_clean.h  unique.cpp  unique.h
tests/: csv2json.bats  hello.bats  templater.bats  unique.bats
utils/: CMakeLists.txt  filetype.h  json.cpp  json.h  read.cpp  read.h  string.cpp  string.h  vector.cpp  vector.h  write.cpp  write.h
